--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -43,4 +43,14 @@
         android:name="edu.birzeit.projectpart1.ui.details.DetailFragment"
         android:label="fragment_detail"
         tools:layout="@layout/fragment_detail" />
+    <fragment
+        android:id="@+id/nav_profile_agency"
+        android:name="edu.birzeit.projectpart1.ui.ProfileAgency.ProfileAgencyFragment"
+        android:label="Agency Profile"
+        tools:layout="@layout/fragment_profile_agency" />
+    <fragment
+        android:id="@+id/nav_profile_tenent"
+        android:name="edu.birzeit.projectpart1.ui.ProfileTenant.ProfileTenantFragment"
+        android:label="Tenant Profile"
+        tools:layout="@layout/fragment_profile_tenent" />
 </navigation>
