--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,7 +8,12 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_baseline_list_alt_24"
             android:title="@string/menu_home" />
+        <item android:id="@+id/nav_search"
+            android:icon="@drawable/ic_search"
+            android:title="Property search"
+            />
         <item
+
             android:id="@+id/nav_postproperty"
             android:icon="@drawable/ic_post"
             android:title="Post"
