--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -43,4 +43,9 @@
         android:name="edu.birzeit.projectpart1.ui.details.DetailFragment"
         android:label="fragment_detail"
         tools:layout="@layout/fragment_detail" />
+    <fragment
+        android:id="@+id/nav_search"
+        android:name="edu.birzeit.projectpart1.ui.search.SearchFragment"
+        android:label="Property Searching"
+        tools:layout="@layout/fragment_search" />
 </navigation>
