--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -51,7 +51,7 @@
             android:title="Profile"
             />
 
-        <item android:id="@+id/nav_logout"
+        <item android:id="@+id/logut_frag"
             android:icon="@drawable/ic_logout"
             android:title="Logout"
             />
