--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -20,14 +20,15 @@
         android:layout_gravity="left"
         android:contentDescription="@string/nav_header_desc"
         android:src="@drawable/house1" />
+
     <TextView
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="2dp"
         android:text="Project Android"
-        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        />
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
